[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robmqtt"
version = "1.0.0"
description = "A robust production-grade MQTT client for edge devices with offline queuing, inflight tracking, and reliable delivery"
authors = [
    { name = "Supun Sriyananda", email = "31850264+ranaweerasupun@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["mqtt", "iot", "edge", "offline", "queue", "paho"]
dependencies = [
    "paho-mqtt>=1.6.1,<2.0",
]

[project.urls]
Homepage = "https://github.com/ranaweerasupun/resilient-edge-mqtt-client"
Source = "https://github.com/ranaweerasupun/resilient-edge-mqtt-client"
Issues = "https://github.com/ranaweerasupun/resilient-edge-mqtt-client/issues"
Changelog = "https://github.com/ranaweerasupun/resilient-edge-mqtt-client/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Install dev dependencies with: pip install ".[dev]"
# Or the traditional way:        pip install -r dev-requirements.txt
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["robmqtt"]

# -----------------------------------------------------------------------
# pytest configuration (replaces pytest.ini from v0.8.0)
# -----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: tests that require an external MQTT broker (run with: pytest -m integration)",
]
